--- a/Challenge2/3-column-preview-card-component-main/3-column-preview-card-component-main/index.html
+++ b/Challenge2/3-column-preview-card-component-main/3-column-preview-card-component-main/index.html
@@ -5,7 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="mobile.css">
+
   <title>Frontend Mentor | 3-column preview card component</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
@@ -15,22 +17,44 @@
   </style>
 </head>
 <body>
-  
-  Sedans
-  Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city 
-  or on your next road trip.
 
-  SUVs
-  Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation 
-  and off-road adventures.
+<div id="container">
 
-  Luxury
-  Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury 
-  rental and arrive in style.
-  
+  <div id="sedans">
+    <div class="desc">
+      <img src="images/icon-sedans.svg" alt="sedan">
+      <h1>SEDANS</h1>
+      <p>Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city or on your next road trip.</p>
+    </div>
+
+    <input type="button" value="Learn More">
+  </div>
+
+  <div id="suvs">
+    <div class="desc">
+      <img src="images/icon-suvs.svg" alt="suv">
+      <h1>SUVS</h1>
+      <p>Take an SUB for its spacious interior, power, and versatility. Perfect for your next family vacation and off-road adventures.</p>
+    </div>
+
+    <input type="button" value="Learn More">
+  </div>
+
+  <div id="luxury">
+    <div class="desc">
+      <img src="images/icon-luxury.svg" alt="luxury">
+      <h1>LUXURY</h1>
+      <p>Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury rental and arrive in style.</p>
+    </div>
+
+    <input type="button" value="Learn More">
+  </div>
+
+</div>
+
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="www.jakub-radzik.ovh">Jakub Radzik</a>.
   </div>
 </body>
 </html>
