--- a/Challenge3/chat-app-css-illustration-master/index.html
+++ b/Challenge3/chat-app-css-illustration-master/index.html
@@ -16,6 +16,9 @@
 <body>
 
   <div id="container">
+    <div id="gradient-bar" class="back"></div>
+    <div id="gray-bar" class="back"></div>
+
     <div id="phone">
       <div id="notch">
       </div>
